--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -8,12 +8,28 @@
       <!--Bootstrap-->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" 
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+      <link rel = "stylesheet" href = "stylesheets/style.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src = "index.js" async ></script>
    </head>
    <body>
       <nav class="navbar bg-dark bg-body-tertiary" data-bs-theme = "dark">
          <div class="container-fluid">
            <span class="navbar-brand mb-0 h1">Movie Database by Quinn McClure and John Fox</span>
          </div>
-       </nav>
+      </nav>
+      <!-- <div class="input-group mb-3">
+         <input type="text" class="form-control" placeholder="Input a query" aria-label="Query" aria-describedby="button-addon2">
+         <button class="btn btn-outline-secondary" type="button" id="button-query" form = "Query" onclick=getQueryResult()>Button</button>
+      </div>
+      <div id = result>
+         hhh
+      </div> -->
+
+      <form id="myForm">
+         <input type="text" id="sqlInput" placeholder="Enter text">
+         <button type="submit" id="submitButton">Submit</button>
+       </form>
+       <div id="output"></div>
    </body>
 </html>
