functioning input to button and output to box, just text no querying yet

--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -23,9 +23,9 @@
             <h3>
                Average age of actors in 
                <input type="text" id="q1Input" placeholder="Movie Title">
-               <button onclick="alert('js function that outputs query 1 results in purple box')">Run Query</button>
+               <button id = "q1Button" onclick="alert('js function that outputs query 1 results in purple box')">Run Query</button>
             </h3>
-            <div class="queryOutput" id = "avgActorsQuery">
+            <div class="queryOutput" id = "q1Output">
                Output Will go here
             </div>
          </div>
@@ -91,12 +91,12 @@
          hhh
       </div> -->
 
-      <form id="myForm">
+      <!-- <form id="myForm">
          <input type="text" id="sqlInput" placeholder="Enter text">
          <button type="submit" id="submitButton">Submit</button>
        </form>
        <p>Result:</p>
        <br>
-       <div id="output"></div>
+       <div id="output"></div> -->
    </body>
 </html>
