new db version and website code for q2

--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -34,9 +34,9 @@
                <input type="text" id="q2Year1Input" placeholder="year 1"> 
                and 
                <input type="text" id="q2Year2Input" placeholder="year 2"> 
-               <button onclick="alert('js function that outputs query 2 results in purple box')">Run Query</button>
+               <button id = "q2Button" onclick="alert('js function that outputs query 2 results in purple box')">Run Query</button>
             </h3>
-            <div class="queryOutput" id = "betweenYrsQuery">
+            <div class="queryOutput" id = "q2Output">
                Output Will go here
             </div>
          </div>
