able to get output on q4 on website, need to modify where vars are inserted

--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -66,9 +66,9 @@
                to 
                <input type="text" id="q4EndInput" placeholder="End range">
                most popular genres by ticket sales
-               <button onclick="alert('js function that outputs query 4 results in purple box')">Run Query</button>
+               <button id = "q4Button" onclick="alert('js function that outputs query 4 results in purple box')">Run Query</button>
             </h3>
-            <div class="queryOutput" id = "popTixSalesQuery">
+            <div class="queryOutput" id = "q4Output">
                Output Will go here
             </div>
          </div>
