--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -100,7 +100,7 @@
          <div class="queryBox">
             <h3>
                Find the names of the actors who have appeared in the most number of movies along with the count of movies they have acted in.
-               <button>Run Query</button>
+               <button id = "q6Button">Run Query</button>
             </h3>
             <div class="queryOutput">
                <table id="query6Tbl" class="queryOutput">
