--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -33,7 +33,7 @@
          <div class="queryBox">
             <h3>
                Average age of actors in 
-               <input type="text" id="q1Input" placeholder="Movie Title" value="The Super Mario Bros. Movie">
+               <input type="text" id="q1Input" placeholder="Movie Title">
                <button id = "q1Button">Run Query</button>
             </h3>
             <div class="queryOutput">
