--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -26,9 +26,8 @@
            <span class="navbar-brand mb-0 h1">Movie Database by Quinn McClure and John Fox</span>
          </div>
       </nav>
-
+      <!--Queries-->
       <div id="queryContainer">
-
          <!--Query 1-->
          <div class="queryBox">
             <h3>
@@ -106,6 +105,20 @@
                <table id="query6Tbl" class="queryOutput">
                </table>
             </div>
+         </div>
+      </div>
+      <!--Add/Update/Delete-->
+      <div id="modifyContainer">
+         <div class="modifyBox">
+            Add movie 
+            <br>
+            <input type="text" id="ticketsSoldInput" placeholder="tickets sold ex:1432432">
+         </div>
+         <div class="modifyBox">
+            Update Box
+         </div>
+         <div class="modifyBox">
+            Delete Box
          </div>
       </div>
    </body>
