working backend on add but need to press button twice

--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -110,7 +110,7 @@
       </div>
       <!--Add/Update/Delete-->
       <div id="modifyContainer">
-         <div class="modifyBox">
+         <div class="modifyBox" id = "addMovieBox">
             Add movie 
             <br>
             <input type="text" id="ticketsSoldInput" placeholder="$Tickets sold ex: 1432432"><br>
@@ -121,7 +121,7 @@
             <input type="text" id="summaryInput" placeholder="Summary ex: The story of The Super Mario Bros. on their journey through the Mushroom Kingdom."><br>
             <input type="text" id="secondsInput" placeholder="Length seconds ex: 5950"><br>
             <input type="text" id="budgetInput" placeholder="$Budget ex: 170000000"><br>
-            <button onclick="addMovie()">Add Movie</button>
+            <button id = "addMovieButton" onclick="addMovie()">Add Movie</button>
             <div id="addOutput" class="modifyOutput">
                Status goes here
             </div>
