--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -111,46 +111,60 @@
       <!--Add/Update/Delete-->
       <div id="modifyContainer">
          <div class="modifyBox" id = "addMovieBox">
-            Add movie 
-            <br>
-            <input type="text" id="ticketsSoldInput" placeholder="$Tickets sold ex: 1432432"><br>
-            <input type="text" id="ratingInput" placeholder="Rating ex: R"><br>
-            <input type="text" id="languageInput" placeholder="Language ex: English"><br>
-            <input type="text" id="releaseYearInput" placeholder="Release Year ex: 2014"><br>
-            <input type="text" id="titleInput" placeholder="Title ex: Tenet"><br>
-            <input type="text" id="summaryInput" placeholder="Summary ex: The story of The Super Mario Bros. on their journey through the Mushroom Kingdom."><br>
-            <input type="text" id="secondsInput" placeholder="Length seconds ex: 5950"><br>
-            <input type="text" id="budgetInput" placeholder="$Budget ex: 170000000"><br>
-            <button id = "addMovieButton" onclick="addMovie()">Add Movie</button>
-            <div id="addOutput" class="modifyOutput">
-               Status goes here
+            <h3>
+               Add Movie
+            </h3> 
+            <div class = "modifyInputs">
+               <br>
+               <h3>
+                  <input type="text" id="ticketsSoldInput" placeholder="$Tickets sold ex: 1432432"><br>
+                  <input type="text" id="ratingInput" placeholder="Rating ex: R"><br>
+                  <input type="text" id="languageInput" placeholder="Language ex: English"><br>
+                  <input type="text" id="releaseYearInput" placeholder="Release Year ex: 2014"><br>
+                  <input type="text" id="titleInput" placeholder="Title ex: Tenet"><br>
+                  <input type="text" id="summaryInput" placeholder="Summary ex: The story of The Super Mario Bros. on their journey through the Mushroom Kingdom."><br>
+                  <input type="text" id="secondsInput" placeholder="Length seconds ex: 5950"><br>
+                  <input type="text" id="budgetInput" placeholder="$Budget ex: 170000000"><br>
+                  <button id = "addMovieButton" onclick="addMovie()">Add Movie</button>
+               </h3>
+               <div id="addOutput" class="modifyOutput">
+               <h3>Status goes here</h3>
+               </div>
             </div>
          </div>
          <div class="modifyBox">
-            Update Actor
-            <br>
-            <strong>Search</strong>
-            <input type="text" id="firstNameSearch" placeholder="First Name">
-            <input type="text" id="lastNameSearch" placeholder="Last Name">
-            <br>
-            <br>
-            <strong>Update</strong><br>
-            <input type="text" id="firstNameInput" placeholder="First Name"><br>
-            <input type="text" id="lastNameInput" placeholder="Last Name"><br>
-            <input type="text" id="ageInput" placeholder="Age"><br>
-            <input type="text" id="nationalityInput" placeholder="Nationality"><br>
-            <button onclick="updateActor()">Update Actor</button>
-            <div id="updateOutput" class="modifyOutput">
-               Status goes here
+            <h3>Update Actor</h3>
+            <div class = "modifyInputs">
+               <h3>
+                  <br>
+                  <strong>Search</strong>
+                  <input type="text" id="firstNameSearch" placeholder="First Name">
+                  <input type="text" id="lastNameSearch" placeholder="Last Name">
+                  <br>
+                  <br>
+                  <strong>Update</strong><br>
+                  <input type="text" id="firstNameInput" placeholder="First Name"><br>
+                  <input type="text" id="lastNameInput" placeholder="Last Name"><br>
+                  <input type="text" id="ageInput" placeholder="Age"><br>
+                  <input type="text" id="nationalityInput" placeholder="Nationality"><br>
+                  <button onclick="updateActor()">Update Actor</button>
+                  <div id="updateOutput" class="modifyOutput">
+                     Status goes here
+                  </div>
+               </h3>
             </div>
          </div>
          <div class="modifyBox">
             Delete Production Studio 
-            <br>
-            <input type="text" id="productionStudioInput" placeholder="Production Studio ex: Universal Pictures">
-            <button onclick="deleteProductionStudio()">Delete</button>
-            <div id="deleteOutput" class="modifyOutput">
-               Status goes here
+            <div class = "modifyInputs">
+               <h3>
+                  <br>
+                  <input type="text" id="productionStudioInput" placeholder="Production Studio ex: Universal Pictures">
+                  <button onclick="deleteProductionStudio()">Delete</button>
+                  <div id="deleteOutput" class="modifyOutput">
+                     Status goes here
+                  </div>
+               </h3>
             </div>
          </div>
       </div>
