--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -107,6 +107,42 @@
                </table>
             </div>
          </div>
+
+         <!--Query All Movies-->
+         <div class="queryBox">
+            <h3>
+               Display all movies 
+               <button id = "q7Button">Run Query</button>
+            </h3>
+            <div class="queryOutput">
+               <table id="query7Tbl" class="queryOutput">
+               </table>
+            </div>
+         </div>
+
+         <!--Query All Actors-->
+         <div class="queryBox">
+            <h3>
+               Display all actors 
+               <button id = "q8Button">Run Query</button>
+            </h3>
+            <div class="queryOutput">
+               <table id="query8Tbl" class="queryOutput">
+               </table>
+            </div>
+         </div>
+
+         <!--Query All Production Studios-->
+         <div class="queryBox">
+            <h3>
+               Display all studios 
+               <button id = "q9Button">Run Query</button>
+            </h3>
+            <div class="queryOutput">
+               <table id="query9Tbl" class="queryOutput">
+               </table>
+            </div>
+         </div>
       </div>
       <!--Add/Update/Delete-->
       <div id="modifyContainer">
