quick header fix

--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -191,7 +191,7 @@
             </div>
          </div>
          <div class="modifyBox">
-            Delete Production Studio 
+            <h3>Delete Production Studio</h3>
             <div class = "modifyInputs">
                <h3>
                   <br>
