starter code for clear button

--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -203,6 +203,11 @@
                </h3>
             </div>
          </div>
+         <div class="modifyBox">
+            <h3>
+               <button onclick="clearChanges()">Clear all changes made</button>
+            </h3>
+         </div>
       </div>
    </body>
 </html>
