in process of creating final query, just need to write and test sql

--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -71,7 +71,7 @@
 
          <!--Query 4-->
          <div class="queryBox">
-            <h3>find the top 
+            <h3>Find the top 
                <input type="text" id="q4StartInput" placeholder="Start Range">
                to 
                <input type="text" id="q4EndInput" placeholder="End range">
@@ -87,8 +87,10 @@
          <!--Query 5-->
          <div class="queryBox">
             <h3>
-               Unwritten Query here
-               <button>Run Query</button>
+               Find the average budget of movies directed by
+               <input type="text" id="q5InputFirst" placeholder="Director First Name">
+               <input type="text" id="q5InputLast" placeholder="Director Last Name">
+               <button id = "q5Button">Run Query</button>
             </h3>
             <div class="queryOutput">
                <table id="query5Tbl" class="queryOutput">
