modified html and js

--- a/deployment/server/public/index.html
+++ b/deployment/server/public/index.html
@@ -87,9 +87,7 @@
          <!--Query 5-->
          <div class="queryBox">
             <h3>
-               Find the average budget of movies directed by
-               <input type="text" id="q5InputFirst" placeholder="Director First Name">
-               <input type="text" id="q5InputLast" placeholder="Director Last Name">
+               Find the average budget of all movies directed by the directors that directed the top 5 highest grossing movies
                <button id = "q5Button">Run Query</button>
             </h3>
             <div class="queryOutput">
